--- a/timeline.html
+++ b/timeline.html
@@ -203,7 +203,7 @@
       entry.className = `entry ${side}`;
       entry.innerHTML = `
         <div class="content">
-          <img src="images/i${i + 1}.jpg" alt="Bond Image ${i + 1}">
+          <img src="Images/i${i + 1}.jpg" alt="Bond Image ${i + 1}">
           <p>${desc}</p>
         </div>
       `;
